--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,11 @@
 {
     "name": "hexlet/code",
+    "description": "Brain games",
+    "license": "MIT",
     "autoload": {
-        "psr-4": {
-            "Hexlet\\Code\\": "src/"
-        }
+        "files": [
+            "src/Cli.php"
+        ]
     },
     "bin": [
         "bin/brain-games"
@@ -14,6 +16,7 @@
             "email": "VTVTima@mail.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.13"
+    }
 }
-
