Добавлена новая игра brain-prime

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
             "src/Games/Even.php",
             "src/Games/Calc.php",
             "src/Games/Gcd.php",
-            "src/Games/Progression.php"
+            "src/Games/Progression.php",
+            "src/Games/Prime.php"
         ]
     },
     "bin": [
@@ -17,7 +18,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
       ],
     "authors": [
         {
